tests/NormalTests/paczka1/fuzzy1/12755477.err
Error in line 4: wVChAADqs0H A654 40,7
Error in line 22: wVChAADqs0H A51 98,31
Error in line 20: fW8 A654 97,3
Error in line 21: wVChAADqs0H A597 89,5
Error in line 29: wVChAADqs0H A698 28,2
Error in line 27: tJn6zth3 A698 61,6
Error in line 33: wVChAADqs0H A654 34,3
